# library_manager_fastapi_with_db

./: .env  .gitignore  Procfile  pyproject.toml  requirements.txt  vercel.json
api/: main.py
src/library_manager_wdb/: main.py
